--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Базовая разметка HTML</title>
 </head>
 <body>
-  <h1>Code Basics</h1>
+  <h1>Hello world!</h1>
   <p>Бесплатные уроки по программированию и HTML для новичков</p>
 </body>
 </html>
